 - expand CEG underground-test lenience from 1 to 20 elmos (patch by Sprunk)
 - allow but do not enable staggered LOS updates
 - do not hard-assign floatOnWater=true for hovers and ships
   checks for this property now first query a unit's MoveDef
   (if any) so that ship->tank and similar substitutions via
   MoveCtrl.SetMoveDef behave as expected
 - Spring.CreateUnit with canBeAssisted=false (patch by Sprunk)
   if a builderID parameter is passed to Spring.CreateUnit, the new unit
   will consider that its solo-builder if it has canBeAssisted=false set
 - EMGCannon now obeys flightTime override (patch by Sprunk)
 - change a weapon reaiming-tolerance constant from 20 radians to 20 degrees (patch by Sprunk)
 - experiment with larger medium-resolution PFS blocksize (16*SQUARE_SIZE vs 8*SQUARE_SIZE)
 - bump the default unloadSpread multiplier from 1 to 5

Lua:
 ! Undeprecate {unit,feature}def.modelname and add .modeltype and .modelpath to
   allow reading these without loading the model. Removed def.model.{name,type,path}
   so they aren't used accidentally.
 ! The callins GameStart and GamePreload won't be called when a saved game is loaded
 - Add VFS.AbortDownload(id) - returns whether the download was found&removed from the queue
 - Add Spring.Get{Game,Menu}Name to LuaUnsyncedRead, so LuaMenu and unsynced Lua handles know about each other
 - Add new callins (LuaMenu only):
   ActivateMenu() that is called whenever LuaMenu is on with no game loaded.
   ActivateGame() that is called whenever LuaMenu is on with a game loaded.
   AllowDraw() if it returns false, the next draw call is skipped (only active when a game isn't running)
 - Add Spring.{Set,Get}VideoCapturingMode() - this doesn't actually record the game in any way,
   it just regulates the framerate and interpolations.
 - add Engine and Platform global tables currently containing the following keys:
     Engine.version: string
     Engine.versionFull: string
     Engine.versionPatchSet: string